--- a/Day2-ColorFlipper/style.css
+++ b/Day2-ColorFlipper/style.css
@@ -2,12 +2,10 @@
     box-sizing: border-box;
     margin: 0px;
     padding: 0px;
-    /* background-color: aquamarine; */
-    /* border: 2px solid red; */
 }
 
 #colorFlipper {
-    width: 100vh;
+    width: 100vw;
     height: 100vh;
     justify-content: center;
     align-items: center;
